--- a/html files/Eventsinside.html
+++ b/html files/Eventsinside.html
@@ -13,7 +13,7 @@
             background-color: #f9f9f9;
         }
         .header {
-            background-color: #333;
+            background-color: skyblue;
             color: #fff;
             padding: 20px;
             display: flex;
@@ -88,7 +88,7 @@
         </div>
     </header>
 
-    <div class="container"  style="background-color:lavender;">
+    <div class="container"  style="background-color: #003366">
         <div class="dashboard-options" >
             <div class="option-card" style="background-color:aqua">
                 <h2>Codeathon</h2>
@@ -98,12 +98,12 @@
             <div class="option-card" style="background-color:aqua;">
                 <h2>Hour of Code</h2>
            
-                <a href="events_data.html" class="no-underline"> <i class="ri-chat-1-line"></i> View</a>
+                <a href="http://localhost/hourofcodereg.php" class="no-underline"> <i class="ri-chat-1-line"></i> View</a>
             </div>
             <div class="option-card"  style="background-color:aqua;">
                 <h2>Codesule</h2>
        
-                <a href="http://localhost/Feedbackdata.php" class="no-underline"> <i class="ri-chat-1-line"></i> View</a>
+                <a href="http://localhost/codesuleinside.php" class="no-underline"> <i class="ri-chat-1-line"></i> View</a>
             </div>
         </div>
     </div>
