--- a/html files/calender21-22.html
+++ b/html files/calender21-22.html
@@ -52,7 +52,7 @@ h1{
          <nav class="nav container">
             <div class="nav__menu" id="nav-menu">
                <ul class="nav__list">-
-                  <li><a href="project.html" class="nav__link">Home</a></li>
+                  <li><a href="project2.html" class="nav__link">Home</a></li>
 
                   <li class="dropdown__item">
                     <div class="nav__link">
