--- a/html files/hc21-22.html
+++ b/html files/hc21-22.html
@@ -45,7 +45,9 @@
          <nav class="nav container">
             <div class="nav__menu" id="nav-menu">
                <ul class="nav__list">-
-                  <li><a href="project.html" class="nav__link">Home</a></li>
+                  <li><a href="project2.html" class="nav__link">Home</a></li>
+                  <li><a href="orgtemplate.html" class="nav__link">ACM</a></li>
+
 
                   <li class="dropdown__item">
                     <div class="nav__link">
