--- a/html files/Feedback.html
+++ b/html files/Feedback.html
@@ -87,8 +87,8 @@ cursor:pointer;
         <label for="StudentID">Student ID:</label>
         <input type="text" id="StudentID" name="StudentID" placeholder="Enter your student ID" required>
 
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" placeholder="Enter your name" required>
+        <label for="eventname">Event Name:</label>
+        <input type="text" id="eventname" name="eventname" placeholder="Enter your  event name" required>
 
         <label for="message">Message</label>
         <textarea id="message" name="message" rows="4" cols="50" placeholder="Enter your feedback here" required></textarea>
